spacing issue in contacts

--- a/style.css
+++ b/style.css
@@ -266,7 +266,7 @@ div#contact-section{
 }
 #contact-section h1{
   text-align: center;
-  padding: 50px 0px 25px;
+  padding: 25px 0px 25px;
 }
 #contact-section h2{
   text-align: center;
